--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
     <header class="page-header">
         <div class="contacts container ">
             <nav class="contacts-nav">
+                <div class="logo">
                 <a href="" class="contacts-nav__logo"><span class="contacts-nav__element">Web</span>Studio</a>
+                </div>
+                <div class="menu">
+                    <button type="button" class="menu-toggle js-open-menu" aria-expanded="false"
+                        aria-controls="mobile-menu">
+                        <svg class="menu__svg" width="40" height="40" aria-label="Переключатель мобильного меню">
+                            <use class="" href="./images/symbol-defs.svg#icon-burger"></use>
+                        </svg>
+                    </button>
+                    <div class="menu-container js-menu-container" id="mobile-menu">
+                        <button type="button" class="menu-toggle js-close-menu" aria-expanded="false"
+                            aria-controls="mobile-menu">
+                            <svg class="" width="40" height="40" aria-label="Переключатель мобильного меню">
+                                <use class="" href="./images/symbol-defs.svg#icon-close"></use>
+                            </svg>
+                        </button>
+                        <ul class="menu-contacts">
+                            <li class="menu-contacts__item"><a class="menu-contacts__link current"
+                                    href="./index.html">Студия</a></li>
+                            <li class="menu-contacts__item"><a class="menu-contacts__link"
+                                    href="./portfolio.html">Портфолио</a></li>
+                            <li class="menu-contacts__item"><a class="menu-contacts__link" href="">Контакты</a></li>
+                        </ul>
+                        <ul class="menu-nav">
+                            <li class="menu-nav__item tel"><a class="menu-nav__link tel" href="">+38 096 111 11 11</a></li>
+                            <li class="menu-nav__item"><a class="menu-nav__link" href="">info@devstudio.com</a></li>
+                        </ul>
+                        <ul class="menu-social">
+                            <li class="menu-social__item"><a class="menu-social__link" href="">Instagram</a></li>
+                            <li class="menu-social__item"><a class="menu-social__link" href="">Twitter</a></li>
+                            <li class="menu-social__item"><a class="menu-social__link" href="">Facebook</a></li>
+                            <li class="menu-social__item"><a class="menu-social__link" href="">LinkedIn</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <ul class="contacts-nav__list">
                     <li class="contacts-nav__item"><a class="contacts-nav__link current" href="./index.html">Студия</a>
                     </li>
@@ -29,7 +64,7 @@
                     <li class="contacts-nav__item"><a class="contacts-nav__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacts">
+            <ul class="contacts-list">
                 <li class="contacts-item">
                     <a class="contacts-item__link" href="mailto:info@devstudio.com"><svg class="contacts-item__svg"
                             width="16" height="12">
@@ -368,19 +403,25 @@
             <div>
                 <form>
                     <h3 class="heading-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
-                    <label>
+                    <label class="footer-form__mail">
                         <input type="email" name="mail" placeholder="E-mail" class="mail-subscr">
                     </label>
-                    <button type="submit" class="button-subscr">Подписаться
-                        <svg class="icons-subscr">
-                            <use href="./images/symbol-defs.svg#icon-send"></use>
-                        </svg>
-                    </button>
+                    <label class="footer-form__button">
+                        <button type="submit" class="button-subscr">Подписаться
+                            <svg class="icons-subscr">
+                                <use href="./images/symbol-defs.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </label>
                 </form>
             </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 
 </html>
