--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/portfolio.min.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -94,8 +94,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img3.jpg"
-                                    alt="открытый ноутбук на каотором изображено 3 человека " width="370">
+                                <img class="box-gallery__images"
+                                srcset="
+                                ./images/box1p370.jpg x1,
+                                ./images/box1p640.jpg x2,
+                                ./images/box1p980.jpg x3
+                                "
+                                 src="./images/box1p370.jpg"
+                                 alt="открытый ноутбук на каотором изображено 3 человека "
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту платформу для цифрового
@@ -111,8 +118,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img1.jpg"
-                                    alt="Постер New Orlean vs Golden Star" width="370">
+                                <img class="box-gallery__images"
+                                srcset="
+                                ./images/box2p370.jpg x1,
+                                ./images/box2p640.jpg x2,
+                                ./images/box2p980.jpg x3
+                                "
+                                 src="./images/box2p370.jpg"
+                                 alt="Постер New Orlean vs Golden Star"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту платформу для цифрового
@@ -128,8 +142,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img2.jpg" alt="Ресторан Seafood"
-                                    width="370">
+                                <img class="box-gallery__images"
+                                srcset="
+                                ./images/box3p370.jpg x1,
+                                ./images/box3p640.jpg x2,
+                                ./images/box3p980.jpg x3
+                                "
+                                 src="./images/box3p370.jpg"
+                                 alt="Ресторан Seafood"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -146,8 +167,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img4.jpg" alt="черные наушники большие"
-                                    width="370">
+                                <img class="box-gallery__images"
+                                srcset="
+                                ./images/box4p370.jpg x1,
+                                ./images/box4p640.jpg x2,
+                                ./images/box4p980.jpg x3
+                                "
+                                 src="./images/box4p370.jpg" 
+                                 alt="черные наушники большие"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -164,7 +192,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img5.jpg" alt="посылка box" width="370">
+                                <img class="box-gallery__images" 
+                                 srcset="
+                                ./images/box5p370.jpg x1,
+                                ./images/box5p640.jpg x2,
+                                ./images/box5p980.jpg x3
+                                "
+                                src="./images/box5p370.jpg" 
+                                alt="посылка box" 
+                                width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -181,8 +217,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img6.jpg"
-                                    alt="открыта страница на компьютере" width="370">
+                                <img class="box-gallery__images" 
+                                 srcset="
+                                ./images/box6p370.jpg x1,
+                                ./images/box6p640.jpg x2,
+                                ./images/box6p980.jpg x3
+                                "
+                                 src="./images/box6p370.jpg"
+                                 alt="открыта страница на компьютере"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -199,8 +242,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img7.jpg" alt="журнал в развороте"
-                                    width="370">
+                                <img class="box-gallery__images"
+                                 srcset="
+                                ./images/box7p370.jpg x1,
+                                ./images/box7p640.jpg x2,
+                                ./images/box7p980.jpg x3
+                                "
+                                 src="./images/box7p370.jpg"
+                                 alt="журнал в развороте"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -217,8 +267,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img8.jpg" alt="белая этикетка"
-                                    width="370">
+                                <img class="box-gallery__images"
+                                 srcset="
+                                ./images/box8p370.jpg x1,
+                                ./images/box8p640.jpg x2,
+                                ./images/box8p980.jpg x3
+                                "
+                                 src="./images/box8p370.jpg"
+                                 alt="белая этикетка"
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -235,8 +292,15 @@
                     <li class="portfolio-list">
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
-                                <img class="box-gallery__images" src="./images/img9.jpg"
-                                    alt="человек печатает на ноутбуке" width="370">
+                                <img class="box-gallery__images"
+                                 srcset="
+                                ./images/box9p370.jpg x1,
+                                ./images/box9p640.jpg x2,
+                                ./images/box9p980.jpg x3
+                                "
+                                 src="./images/box9p370.jpg"
+                                 alt="человек печатает на ноутбуке" 
+                                 width="370">
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
                                         коронавируса. Компании используют эту
@@ -256,44 +320,46 @@
     </main>
     <footer class="footer-container">
         <div class="footer container">
-            <div class="footer-element">
-                <a href="" class="footer-element__logo"><span class="footer-element__item">Web</span>Studio</a>
-                <address>
-                    <ul class="footer-nav">
-                        <li class="footer-nav__address">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li class="footer-nav__item"><a class="footer-nav__link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="footer-nav__item"><a class="footer-nav__link" href="tel:+380961111111">+38 096 111 11
-                                11</a></li>
+            <div class="box-footer">
+                <div class="footer-element">
+                    <a href="" class="footer-element__logo"><span class="footer-element__item">Web</span>Studio</a>
+                    <address>
+                        <ul class="footer-nav">
+                            <li class="footer-nav__address">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="footer-nav__item"><a class="footer-nav__link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="footer-nav__item"><a class="footer-nav__link" href="tel:+380961111111">+38 096 111 11
+                                    11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-item">
+                    <h3 class="heading-footer">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                    <ul class="footer-icons">
+                        <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
+                </div>
+                
             </div>
-            <div class="footer-item">
-                <h3 class="heading-footer">ПРИСОЕДИНЯЙТЕСЬ</h3>
-                <ul class="footer-icons">
-                    <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-icons__item"><a href="" class="footer-icons__link"><svg class="footer-icons__svg">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
                 <form>
                     <h3 class="heading-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
                     <label class="footer-form__mail">
