--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body>
     <header class="page-header">
-        <div class="contacts container ">
-            <nav class="contacts-nav">
+        <div class="container container-contacts"><!-- flex -->
+            <nav class="nav">
                 <div class="logo">
-                <a href="" class="contacts-nav__logo"><span class="contacts-nav__element">Web</span>Studio</a>
+                <a href="" class="logo__link"><span class="logo__element">Web</span>Studio</a>
                 </div>
                 <div class="menu">
                     <button type="button" class="menu-toggle js-open-menu" aria-expanded="false"
@@ -37,42 +37,42 @@
                                 <use class="" href="./images/symbol-defs.svg#icon-close"></use>
                             </svg>
                         </button>
-                        <ul class="menu-contacts">
-                            <li class="menu-contacts__item"><a class="menu-contacts__link current"
+                        <ul class="navigation-menu">
+                            <li class="navigation-menu__item"><a class="navigation-menu__link current"
                                     href="./index.html">Студия</a></li>
-                            <li class="menu-contacts__item"><a class="menu-contacts__link"
+                            <li class="navigation-menu__item"><a class="navigation-menu__link"
                                     href="./portfolio.html">Портфолио</a></li>
-                            <li class="menu-contacts__item"><a class="menu-contacts__link" href="">Контакты</a></li>
+                            <li class="navigation-menu__item"><a class="navigation-menu__link" href="">Контакты</a></li>
                         </ul>
-                        <ul class="menu-nav">
-                            <li class="menu-nav__item tel"><a class="menu-nav__link tel" href="">+38 096 111 11 11</a></li>
-                            <li class="menu-nav__item"><a class="menu-nav__link" href="">info@devstudio.com</a></li>
+                        <ul class="contacts-menu">
+                            <li class="contacts-menu__item tel"><a class="contacts-menu__link tel" href="">+38 096 111 11 11</a></li>
+                            <li class="contacts-menu__item"><a class="contacts-menu__link" href="">info@devstudio.com</a></li>
                         </ul>
-                        <ul class="menu-social">
-                            <li class="menu-social__item"><a class="menu-social__link" href="">Instagram</a></li>
-                            <li class="menu-social__item"><a class="menu-social__link" href="">Twitter</a></li>
-                            <li class="menu-social__item"><a class="menu-social__link" href="">Facebook</a></li>
-                            <li class="menu-social__item"><a class="menu-social__link" href="">LinkedIn</a></li>
+                        <ul class="social-menu">
+                            <li class="social-menu__item"><a class="social-menu__link" href="">Instagram</a></li>
+                            <li class="social-menu__item"><a class="social-menu__link" href="">Twitter</a></li>
+                            <li class="social-menu__item"><a class="social-menu__link" href="">Facebook</a></li>
+                            <li class="social-menu__item"><a class="social-menu__link" href="">LinkedIn</a></li>
                         </ul>
                     </div>
                 </div>
-                <ul class="contacts-nav__list">
-                    <li class="contacts-nav__item"><a class="contacts-nav__link current" href="./index.html">Студия</a>
+                <ul class="navigation">
+                    <li class="navigation__item"><a class="navigation__link current" href="./index.html">Студия</a>
                     </li>
-                    <li class="contacts-nav__item"><a class="contacts-nav__link" href="./portfolio.html">Портфолио</a>
+                    <li class="navigation__item"><a class="navigation__link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="contacts-nav__item"><a class="contacts-nav__link" href="">Контакты</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacts-list">
-                <li class="contacts-item">
-                    <a class="contacts-item__link" href="mailto:info@devstudio.com"><svg class="contacts-item__svg"
+            <ul class="contacts">
+                <li class="contacts__item">
+                    <a class="contacts__link" href="mailto:info@devstudio.com"><svg class="contacts__svg"
                             width="16" height="12">
                             <use href="./images/symbol-defs.svg#icon-mail"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="contacts-item">
-                    <a class="contacts-item__link" href="tel:+380961111111"><svg class="contacts-item__svg" width="10"
+                <li class="contacts__item">
+                    <a class="contacts__link" href="tel:+380961111111"><svg class="contacts__svg" width="10"
                             height="16">
                             <use href="./images/symbol-defs.svg#icon-tel"></use>
                         </svg>+38 096 111 11 11</a>
