--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="logo">
                 <a href="" class="logo__link"><span class="logo__element">Web</span>Studio</a>
                 </div>
-                <div class="menu">
+                <div class="menu is-hidden">
                     <button type="button" class="menu-toggle js-open-menu" aria-expanded="false"
                         aria-controls="mobile-menu">
                         <svg class="menu__svg" width="40" height="40" aria-label="Переключатель мобильного меню">
