--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
                     <li class="works__item">
                         <img class="img"
                         srcset="
-                        ./images/box1x370.jpg x1,
-                        ./images/box1x640.jpg x2,
-                        ./images/box1x980.jpg x3
+                        ./images/box1x370.jpg 1x,
+                        ./images/box1x640.jpg 2x,
                         "
                          src="./images/box1x370.jpg"
                          alt="ноутбук и чертежи"
@@ -200,7 +199,6 @@
                         srcset="
                         ./images/box2x370.jpg x1,
                         ./images/box2x640.jpg x2,
-                        ./images/box2x980.jpg x3
                         "
                          src="./images/box2x370.jpg"
                          alt="женщина с телефоном в руках и ноутбук"
@@ -215,7 +213,6 @@
                         srcset="
                         ./images/box3x370.jpg x1,
                         ./images/box3x640.jpg x2,
-                        ./images/box3x980.jpg x3
                         "
                          src="./images/box3x370.jpg"
                          alt="в руках планшет"
@@ -234,11 +231,10 @@
                     <li class="team-conteiner__list">
                         <img class="team-images"
                         srcset="
-                        ./images/igor270.jpg x1,
-                        ./images/igor640.jpg x2,
-                        ./images/igor980.jpg x3
+                        ./images/igor1x.jpg 1x,
+                        ./images/igor2x.jpg 2x
                         "
-                         src="./images/igor270.jpg"
+                         src="./images/igor1x.jpg"
                          alt="мужчина в рубашке ,очках и с бородой"
                          width="270">
                         <div class="team-conteiner__description">
@@ -272,11 +268,10 @@
                     <li class="team-conteiner__list">
                         <img class="team-images"
                         srcset="
-                        ./images/olga270.jpg x1,
-                        ./images/olga640.jpg x2,
-                        ./images/olga980.jpg x3
+                        ./images/olga1x.jpg 1x,
+                        ./images/olga2x.jpg 2x
                         "
-                         src="./images/olga270.jpg" 
+                         src="./images/olga1x.jpg" 
                          alt="женщина блондинка,в очках и в пиджаке"
                          width="270">
                         <div class="team-conteiner__description">
@@ -309,11 +304,10 @@
                     <li class="team-conteiner__list">
                         <img class="team-images"
                         srcset="
-                        ./images/nicolay270.jpg x1,
-                        ./images/nicolay640.jpg x2,
-                        ./images/nicolay980.jpg x3
+                        ./images/nicolay1x.jpg 1x,
+                        ./images/nicolay1x.jpg 2x
                         "
-                         src="./images/nicolay270.jpg"
+                         src="./images/nicolay1x.jpg"
                          alt="мужчина в голубой рубашке"
                          width="270">
                         <div class="team-conteiner__description">
@@ -347,11 +341,10 @@
                     <li class="team-conteiner__list">
                         <img class="team-images"
                         srcset="
-                        ./images/michael270.jpg x1,
-                        ./images/michael640.jpg x2,
-                        ./images/michael980.jpg x3
+                        ./images/michael1x.jpg 1x,
+                        ./images/michael1x.jpg 2x
                         "
-                         src="./images/michael270.jpg"
+                         src="./images/michael1x.jpg"
                          alt="мужчина в черной футболке с бородой и очками"
                          width="270">
                         <div class="team-conteiner__description">
