--- a/portfolio.html
+++ b/portfolio.html
@@ -98,11 +98,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                 srcset="
-                                ./images/box1p370.jpg x1,
-                                ./images/box1p640.jpg x2,
-                                ./images/box1p980.jpg x3
+                                ./images/1box1x.jpg 1x,
+                                ./images/1box2x.jpg 2x
                                 "
-                                 src="./images/box1p370.jpg"
+                                 src="./images/1box1x.jpg"
                                  alt="открытый ноутбук на каотором изображено 3 человека "
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -122,11 +121,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                 srcset="
-                                ./images/box2p370.jpg x1,
-                                ./images/box2p640.jpg x2,
-                                ./images/box2p980.jpg x3
+                                ./images/2box1x.jpg 1x,
+                                ./images/2box2x.jpg 2x,
                                 "
-                                 src="./images/box2p370.jpg"
+                                 src="./images/2box1x.jpg"
                                  alt="Постер New Orlean vs Golden Star"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -146,11 +144,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                 srcset="
-                                ./images/box3p370.jpg x1,
-                                ./images/box3p640.jpg x2,
-                                ./images/box3p980.jpg x3
+                                ./images/3box1x.jpg 1x,
+                                ./images/3box2x.jpg 2x
                                 "
-                                 src="./images/box3p370.jpg"
+                                 src="./images/3box1x.jpg"
                                  alt="Ресторан Seafood"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -171,11 +168,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                 srcset="
-                                ./images/box4p370.jpg x1,
-                                ./images/box4p640.jpg x2,
-                                ./images/box4p980.jpg x3
+                                ./images/4box1x.jpg 1x,
+                                ./images/4box2x.jpg 2x
                                 "
-                                 src="./images/box4p370.jpg" 
+                                 src="./images/4box1x.jpg" 
                                  alt="черные наушники большие"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -196,11 +192,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images" 
                                  srcset="
-                                ./images/box5p370.jpg x1,
-                                ./images/box5p640.jpg x2,
-                                ./images/box5p980.jpg x3
+                                ./images/5box1x.jpg 1x,
+                                ./images/5box2x.jpg 2x
                                 "
-                                src="./images/box5p370.jpg" 
+                                src="./images/5box1x.jpg" 
                                 alt="посылка box" 
                                 width="370">
                                 <div class="box-gallery__overlay">
@@ -221,11 +216,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images" 
                                  srcset="
-                                ./images/box6p370.jpg x1,
-                                ./images/box6p640.jpg x2,
-                                ./images/box6p980.jpg x3
+                                ./images/6box1x.jpg 1x,
+                                ./images/6box2x.jpg 2x
                                 "
-                                 src="./images/box6p370.jpg"
+                                 src="./images/6box1x.jpg"
                                  alt="открыта страница на компьютере"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -246,11 +240,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                  srcset="
-                                ./images/box7p370.jpg x1,
-                                ./images/box7p640.jpg x2,
-                                ./images/box7p980.jpg x3
+                                ./images/7box1x.jpg 1x,
+                                ./images/7box2x.jpg 2x
                                 "
-                                 src="./images/box7p370.jpg"
+                                 src="./images/7box1x.jpg"
                                  alt="журнал в развороте"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -271,11 +264,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                  srcset="
-                                ./images/box8p370.jpg x1,
-                                ./images/box8p640.jpg x2,
-                                ./images/box8p980.jpg x3
+                                ./images/8box1x.jpg 1x,
+                                ./images/8box2x.jpg 2x
                                 "
-                                 src="./images/box8p370.jpg"
+                                 src="./images/8box1x.jpg"
                                  alt="белая этикетка"
                                  width="370">
                                 <div class="box-gallery__overlay">
@@ -296,11 +288,10 @@
                             <div class="box-gallery">
                                 <img class="box-gallery__images"
                                  srcset="
-                                ./images/box9p370.jpg x1,
-                                ./images/box9p640.jpg x2,
-                                ./images/box9p980.jpg x3
+                                ./images/9box1x.jpg 1x,
+                                ./images/9box2x.jpg 2x
                                 "
-                                 src="./images/box9p370.jpg"
+                                 src="./images/9box1x.jpg"
                                  alt="человек печатает на ноутбуке" 
                                  width="370">
                                 <div class="box-gallery__overlay">
